image fill fix on mobile

--- a/hangman/scss/_gameboard.scss
+++ b/hangman/scss/_gameboard.scss
@@ -65,7 +65,6 @@
   flex: 0 0 calc(50% - 2rem);
   display: flex;
   justify-content: center;
-  align-items: flex-end;
   margin-bottom: 1rem;
 }
 
